feat: add overall stats endpoint
