# internal/db/model/stats.go
@@ -2,6 +2,7 @@ package model
 
 const StatsLockCollection = "stats_lock"
 const OverallStatsCollection = "overall_stats"
+const FinalityProviderStatsCollection = "finality_providers_stats"
 
 // StatsLockDocument represents the document in the stats lock collection
 // It's used as a lock to prevent concurrent stats calculation for the same staking tx hash
@@ -26,7 +27,7 @@ func NewStatsLockDocument(
 }
 
 type OverallStatsDocument struct {
-	Id                uint64 `bson:"_id"`
+	Id                string `bson:"_id"`
 	ActiveTvl         int64  `bson:"active_tvl"`
 	TotalTvl          int64  `bson:"total_tvl"`
 	ActiveDelegations int64  `bson:"active_delegations"`
@@ -34,15 +35,10 @@ type OverallStatsDocument struct {
 	TotalStakers      uint64 `bson:"total_stakers"`
 }
 
-func NewOverallStatsDocument(
-	id uint64, activeTvl, totalTvl, activeDelegations, totalDelegations int64, totalStakers uint64,
-) *OverallStatsDocument {
-	return &OverallStatsDocument{
-		Id:                id,
-		ActiveTvl:         activeTvl,
-		TotalTvl:          totalTvl,
-		ActiveDelegations: activeDelegations,
-		TotalDelegations:  totalDelegations,
-		TotalStakers:      totalStakers,
-	}
+type FinalityProviderStatsDocument struct {
+	Id                string `bson:"_id"` // FinalityProviderPkHex:shard-number
+	ActiveTvl         int64  `bson:"active_tvl"`
+	TotalTvl          int64  `bson:"total_tvl"`
+	ActiveDelegations int64  `bson:"active_delegations"`
+	TotalDelegations  int64  `bson:"total_delegations"`
 }
